<resources>
    <string name="app_name">MiniGamesProject</string>
    <string name="Play">"█▀█ █░░ ▄▀█ █▄█\n█▀▀ █▄▄ █▀█ ░█░"</string>
    <string name="Resume">"█▀█ █▀▀ █▀ █░█ █▀▄▀█ █▀▀\n█▀▄ ██▄ ▄█ █▄█ █░▀░█ ██▄"</string>
    <string name="Confirm">"█▀▀ █▀█ █▄░█ █▀▀ █ █▀█ █▀▄▀█\n█▄▄ █▄█ █░▀█ █▀░ █ █▀▄ █░▀░█"</string>
    <string name="New">"█▄░█ █▀▀ █░█░█\n█░▀█ ██▄ ▀▄▀▄▀"</string>
    <string name="Again">"▄▀█ █▀▀ ▄▀█ █ █▄░█\n█▀█ █▄█ █▀█ █ █░▀█"</string>
    <string name="Sudoku">"██████████████████████████████████████\n█─▄▄▄▄█▄─██─▄█▄─▄▄▀█─▄▄─█▄─█─▄█▄─██─▄█\n█▄▄▄▄─██─██─███─██─█─██─██─▄▀███─██─██\n▀▄▄▄▄▄▀▀▄▄▄▄▀▀▄▄▄▄▀▀▄▄▄▄▀▄▄▀▄▄▀▀▄▄▄▄▀▀"</string>
    <string name="Menu">█▄─▀█▀─▄█▄─▄▄─█▄─▀█▄─▄█▄─██─▄█\n██─█▄█─███─▄█▀██─█▄▀─███─██─██\n▀▄▄▄▀▄▄▄▀▄▄▄▄▄▀▄▄▄▀▀▄▄▀▀▄▄▄▄▀▀</string>
    <string name="Puzzle">█████████████████████████████████████████████████ \n █▀░██░▄▄▄███▄─▄▄─█▄─██─▄█░▄▄░▄█░▄▄░▄█▄─▄███▄─▄▄─█ \n ██░██▄▄▄▒████─▄▄▄██─██─███▀▄█▀██▀▄█▀██─██▀██─▄█▀█ \n ▀▄▄▄▀▄▄▄▄▀▀▀▄▄▄▀▀▀▀▄▄▄▄▀▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▄▄▀</string>
    <string name="Games">"███╗░░░███╗██╗███╗░░██╗██╗\n░██████╗░░█████╗░███╗░░░███╗███████╗░██████╗\n████╗░████║██║████╗░██║██║\n██╔════╝░██╔══██╗████╗░████║██╔════╝██╔════╝\n██╔████╔██║██║██╔██╗██║██║\n██║░░██╗░███████║██╔████╔██║█████╗░░╚█████╗░\n██║╚██╔╝██║██║██║╚████║██║\n██║░░╚██╗██╔══██║██║╚██╔╝██║██╔══╝░░░╚═══██╗\n██║░╚═╝░██║██║██║░╚███║██║\n╚██████╔╝██║░░██║██║░╚═╝░██║███████╗██████╔╝\n╚═╝░░░░░╚═╝╚═╝╚═╝░░╚══╝╚═╝\n░╚═════╝░╚═╝░░╚═╝╚═╝░░░░░╚═╝╚══════╝╚═════╝░"</string>
    <string name="uno">"▄█░\n░█░\n▄█▄"</string>
    <string name="due">"█▀█\n░▄▀\n█▄▄"</string>
    <string name="tre">"█▀▀█\n░░▀▄\n█▄▄█"</string>
    <string name="quattro">"░█▀█░\n█▄▄█▄\n░░░█░"</string>
    <string name="cinque">"█▀▀\n▀▀▄\n▄▄▀"</string>
    <string name="sei">"▄▀▀▄\n█▄▄░\n▀▄▄▀"</string>
    <string name="sette">"▀▀▀█\n░░█░\n░▐▌░"</string>
    <string name="otto">"▄▀▀▄\n▄▀▀▄\n▀▄▄▀"</string>
    <string name="nove">"▄▀▀▄\n▀▄▄█\n░▄▄▀"</string>
    <string name="zero">"█▀▀█\n█▄▀█\n█▄▄█"</string>

    <string name="YouWon">"████████████████████████████████████████████\n█▄─█─▄█─▄▄─█▄─██─▄███▄─█▀▀▀█─▄█─▄▄─█▄─▀█▄─▄█\n██▄─▄██─██─██─██─█████─█─█─█─██─██─██─█▄▀─██\n▀▀▄▄▄▀▀▄▄▄▄▀▀▄▄▄▄▀▀▀▀▀▄▄▄▀▄▄▄▀▀▄▄▄▄▀▄▄▄▀▀▄▄▀"</string>
    <string name="YouLost">"████████████████████████████████████████████\n█▄─█─▄█─▄▄─█▄─██─▄███▄─▄███─▄▄─█─▄▄▄▄█─▄─▄─█\n██▄─▄██─██─██─██─█████─██▀█─██─█▄▄▄▄─███─███\n▀▀▄▄▄▀▀▄▄▄▄▀▀▄▄▄▄▀▀▀▀▄▄▄▄▄▀▄▄▄▄▀▄▄▄▄▄▀▀▄▄▄▀▀"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>