<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PuzzleActivity"
    android:background="@color/black">

    <Button
        android:id="@+id/btnAgainPuzzle"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnbackground"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:text="@string/Again"
        android:textColor="#FFFFFF"
        android:textSize="3.7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConfirm" />

    <Button
        android:id="@+id/btnNewPuzzle"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnbackground"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:text="@string/New"
        android:textColor="#FFFFFF"
        android:textSize="4.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConfirm" />

    <TextView
        android:id="@+id/tvInfo2"
        android:layout_width="414dp"
        android:layout_height="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Puzzle"
        android:textColor="@color/purple_500"
        android:textSize="7dp"
        app:layout_constraintBottom_toTopOf="@+id/glGameBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/glGameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="196dp"
        android:columnCount="4"
        android:padding="3dp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Row 1-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bp01"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp02"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp03"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp04"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bp05"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp06"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp07"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp08"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bp09"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp10"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp11"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp12"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bp13"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp14"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp15"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Button
                android:id="@+id/bp16"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
